updated documentation and readme
